--- a/Numerical Method/header.tex
+++ b/Numerical Method/header.tex
@@ -21,9 +21,13 @@
 \usepackage{minted}
 \usepackage{lmodern}
 
-\usemintedstyle{tango}
+% \usemintedstyle{tango}
+\usemintedstyle{friendly}
 
 \definecolor{LightGray}{gray}{0.97}
+
+\usepackage{inconsolata}
+\usepackage[T1]{fontenc}
 
 \usepackage{xfrac}
 
